--- a/index.html
+++ b/index.html
@@ -2,35 +2,60 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Hello, World!</title>
-  <style>
-    body {
-      background: #f8f9fa;
-      font-family: 'Segoe UI', sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-    }
-    .hello-box {
-      padding: 40px;
-      background-color: white;
-      border-radius: 20px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-      text-align: center;
-    }
-    h1 {
-      color: #ff4081;
-      font-size: 2.5rem;
-      margin: 0;
-    }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>62live — Arma Reforger RU Server</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 </head>
 <body>
-  <div class="hello-box">
-    <h1>Hello, World! 💞</h1>
-    <p>Добро пожаловать на сервер, милый!</p>
-  </div>
+  <!-- Шапка -->
+  <section class="hero is-dark">
+    <div class="hero-body">
+      <p class="title has-text-centered">
+        62live — Военный симулятор Arma Reforger
+      </p>
+      <p class="subtitle has-text-centered">
+        Русскоязычный сервер для серьёзных бойцов 💥
+      </p>
+    </div>
+  </section>
+
+  <!-- Основной контент -->
+  <section class="section">
+    <div class="container">
+      <div class="content has-text-centered">
+        <h2 class="title is-4">Добро пожаловать, боец!</h2>
+        <p>
+          62live — это продвинутый сервер для Arma Reforger, созданный для русскоязычного комьюнити, ценящего реализм, тактику и братство на поле боя 🪖🇷🇺
+        </p>
+      </div>
+
+      <div class="columns is-centered mt-5">
+        <div class="column is-half has-text-centered">
+          <div class="box">
+            <h3 class="title is-5">Основные особенности:</h3>
+            <ul>
+              <li>✅ Реалистичный геймплей</li>
+              <li>✅ Активное RU-сообщество</li>
+              <li>✅ Уникальные сценарии</li>
+              <li>✅ Поддержка голосовой связи</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="has-text-centered mt-4">
+        <a class="button is-primary is-large" href="#">Подключиться к серверу</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- Подвал -->
+  <footer class="footer">
+    <div class="content has-text-centered">
+      <p>
+        <strong>62live</strong> © 2025 — Сделано с любовью для сообщества Arma Reforger 💘
+      </p>
+    </div>
+  </footer>
 </body>
 </html>
